lane 1 wave 5: the probe tree accepts, and the one mover is a coin flip in BOTH arms
142 probes, 0 worse, 0 better. Control cratonvm-l1w5-base-20260911 is
origin/dev at 565509592 untouched; trial is that tree plus this wave.

THE BASELINE IS 29 AND THE FIRST READING WAS 33. Four probes -- L5CasRace,
L5SubwordAtomics, L5UnsafeAccess, JcaSunTlsVectors -- read as differing
because HOTSPOT produced zero rows: it died on IllegalAccessError for want
of a runtime --add-exports while this VM, which does not enforce that
module boundary, printed its full output. Every row then counted as a
difference. With the oracle configured like the VM under test all four go
to 0 diff. The probes were COMPILED with the exports; nothing then reminds
you the same flags are needed at RUN time.

VtHandoffProbe read 10 -> 16 on the tree. Six runs per arm looked damning
-- base 10 10 10 10 10 10, trial 10 10 0 10 14 10 -- and that is NOT the
claim this probe was disarmed on last wave, where the CONTROL was the
unstable one. Fourteen INTERLEAVED pairs, both arms in the same minute:

  BASE : 10 0 10 10 10 10 10 10 10 10 0 14 10 10    3 excursions
  TRIAL: 10 14 10 10 10 10 10 10 10 10 14 10 10 10  2 excursions

Same value set, and the CONTROL has MORE excursions than the trial. The
6/6 stability was luck. The probe says so itself: "on CratonVM it is 64 on
an idle host and 55-58 on a loaded one" -- its author measured the row as
load-sensitive on this VM, and this host is never idle.

Also names the cost of map_resize two extra field resolves, which sit on an
operation that already rehashes every chain.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>